<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage_appointment">

    <Button
        android:id="@+id/updateDate"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/updateDate"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/delAppointment"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FA5858"
        android:text="@string/deleteApp"
        android:textColor="@color/design_default_color_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDate"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <View
        android:id="@+id/frame"
        android:layout_width="359dp"
        android:layout_height="331dp"
        android:layout_marginTop="60dp"
        android:background="#fceecb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickSalon2" />

    <TextView
        android:id="@+id/pickSalon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#8CBBF1"
        android:gravity="center_horizontal"
        android:text="@string/myApp"
        android:textColor="@color/textColor"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/appStyle"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toTopOf="@+id/frame" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/appPrice"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/lblStyle" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/appDate"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toBottomOf="@+id/lblPrice" />

    <TextView
        android:id="@+id/appData1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="Feather Cut"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblStyle"
        app:layout_constraintStart_toEndOf="@+id/lblStyle" />

    <TextView
        android:id="@+id/appData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="1000"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPrice"
        app:layout_constraintStart_toEndOf="@+id/lblPrice" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblDate"
        app:layout_constraintStart_toEndOf="@+id/lblDate"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>